(executable
 (name test_irmin)
 (modules test_irmin)
 (libraries
  lwt
  eio.mock
  irmin
  irmin_pack_notafs
  mirage-block-unix
  mtime.clock.os
  block_viz))

(library
 (name block_viz)
 (modules block_viz)
 (libraries notafs graphics color unix))

(executable
 (name bench_kv)
 (modules bench_kv)
 (libraries
  lwt
  notafs
  mirage-block-unix
  mirage-clock-unix
  tar-mirage))

(executable
 (name test_large_notafs)
 (modules test_large_notafs)
 (libraries
  lwt
  notafs
  mirage-block-unix
  mtime.clock.os))
