(test
 (name test_irmin)
 (modules test_irmin)
 (package irmin-pack-notafs)
 (libraries
  lwt
  eio.mock
  irmin
  irmin_pack_notafs
  mirage-block-unix
  mirage-clock-unix
  mtime.clock.os
  block_viz))

(library
 (name block_viz)
 (modules block_viz)
 (libraries notafs graphics color unix))

(test
 (name bench_kv)
 (modules bench_kv)
 (package notafs)
 (libraries lwt notafs mirage-block-unix mirage-clock-unix tar-mirage))

(test
 (name test_large_notafs)
 (modules test_large_notafs)
 (package notafs)
 (libraries lwt notafs mirage-block-unix mirage-clock-unix mtime.clock.os))

(test
 (name test_fs)
 (modules test_fs)
 (package notafs)
 (libraries lwt notafs mirage-block-unix mirage-clock-unix cmdliner))
